--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             wcl4.x = 300;
             wcl4.y = 20
 
-            editor.documents[0].add(wcl4);
+            editor.documents.selected.add(wcl4);
         })
     </script>
     
