--- a/editor.html
+++ b/editor.html
@@ -60,10 +60,13 @@
             wcl4.fill('#ff000066')
             wcl4.x = 300;
             wcl4.y = 20
+            let l = editor.documents.selected.layers.item(0)
+            l.fill('#00ff0066');
+            l.document.sync();
 
             editor.documents.selected.add(wcl4);
             document.body.append(editor.documents.selected.drawLayer)
-            editor.documents.selected.layers.forEach((layer)=>{
+            editor.documents.selected.layers.all().forEach((layer)=>{
                 document.body.append(layer)
             })
         })
