Remove unnecessary parent sync calls in Canvas and index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 let c = '#'+(Math.random() * 0xFFFFFF << 0).toString(16).padStart(6, '0');
 
                 target.fill(c)
-                // target.document.sync()
+                target.parent.sync()
             }
         }
     </script>
