Fix layer selection reference in editor.html to use parent document

--- a/editor.html
+++ b/editor.html
@@ -68,7 +68,7 @@
             editor.documents.document.layers.all().forEach((layer,index)=>{
                 document.body.append(layer)
                 layer.onclick = (event)=>{
-                    layer.document.select(index);
+                    layer.parent.select(index);
                 }
             })
         })
