Add rectangle tool and update editor to support new drawing functionality

--- a/editor.html
+++ b/editor.html
@@ -88,6 +88,10 @@
 <body>
     <div class="container">
         <h2>Editor</h2>
+        <hr>
+        <button type="button" class="btn btn-info">tool:line</button>
+        <button type="button" class="btn btn-info">tool:rectable</button>
+        <hr>
         <div id="wc-editor" style="outline: dashed 1px #f00; width: 600px; height: 600px;" class="d-flex justify-content-center align-items-center mx-auto">
             <canvas id="wc-document" width="500" height="500" is="wc-document"></canvas>
         </div>
