--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             wcl4.x = 130;
             wcl4.y = 10
 
-            editor.documents.document.add(wcl4);
+            editor.document.add(wcl4);
         })
     </script>
     
