Add Move tool and refactor Line and Rectangle tools to extend BaseTool; update editor buttons

--- a/editor.html
+++ b/editor.html
@@ -89,7 +89,8 @@
     <div class="container">
         <h2>Editor</h2>
         <hr>
-        <button type="button" class="btn btn-info" onclick="editor.tools.select('Line')">tool:line</button>
+        <button type="button" class="btn btn-info" onclick="editor.tools.select('Line')">tool:Line</button>
+        <button type="button" class="btn btn-info" onclick="editor.tools.select('Move')">tool:Move</button>
         <button type="button" class="btn btn-info" onclick="editor.tools.select('Rectangle')">tool:Rectangle</button>
         <hr>
         <div id="wc-editor" style="outline: dashed 1px #f00; width: 600px; height: 600px;" class="d-flex justify-content-center align-items-center mx-auto">
