Add Text tool and update event handling in Move and Line tools; enhance Document and BaseTool classes

--- a/editor.html
+++ b/editor.html
@@ -93,6 +93,8 @@
         <button type="button" class="btn btn-info" onclick="editor.tools.select('Move')">tool:Move</button>
         <button type="button" class="btn btn-info" onclick="editor.tools.select('Rectangle')">tool:Rectangle</button>
         <button type="button" class="btn btn-info" onclick="editor.tools.select('Circle')">tool:Circle</button>
+        <button type="button" class="btn btn-info" onclick="editor.tools.select('Text')">tool:Text</button>
+        <button type="button" class="btn btn-info" onclick="editor.tool.apply()">tool:Text - apply</button>
         <hr>
         <div id="wc-editor" style="outline: dashed 1px #f00; width: 600px; height: 600px;" class="d-flex justify-content-center align-items-center mx-auto">
             <canvas id="wc-document" width="500" height="500" is="wc-document"></canvas>
