--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 </head>
 <body>
     <div class="container">
+        <a href="editor.html">editor.html</a>
+    </div>
+    <div class="container">
         <h2>bundle</h2>
         <div class="bundle-box"></div>
         <hr>
