--- a/editor.html
+++ b/editor.html
@@ -87,7 +87,7 @@
     </script>
 </head>
 <body>
-    <div class="position-fixed w-100 h-100 d-flex flex-column" style="top:0;left:0;bottom:0;margin:0; overflow: auto;touch-action: none;">
+    <div class="w-100 h-100 d-flex flex-column" style="top:0;left:0;bottom:auto;margin:0; touch-action: none;">
         <div class="container">
             <h2>Editor</h2>
             <div>
