--- a/editor.html
+++ b/editor.html
@@ -45,11 +45,17 @@
 
     <script type="module">
         import Canvas from "./wc/element/Canvas.js";
+        import Layer from "./wc/element/Layer.js";
         import Document from "./wc/element/Document.js";
-        globalThis.Canvas = Canvas;
-        window.customElements.define('wc-canvas', Canvas,{ extends: "canvas" });
-        globalThis.Document = Document;
-        window.customElements.define('wc-document', Document,{ extends: "canvas" });
+        
+        Canvas.defineCustomElements();
+        Layer.defineCustomElements();
+        Document.defineCustomElements();
+
+        globalThis.Wc = {}
+        globalThis.Wc.Canvas = Canvas;
+        globalThis.Wc.Layer = Layer;
+        globalThis.Wc.Document = Document;
 
         import Editor from "./wc/Editor.js";
 
