--- a/editor.html
+++ b/editor.html
@@ -98,6 +98,7 @@
             <h2>Editor</h2>
             <div>
                 <button type="button" class="btn btn-info" onclick="editor.tools.select('Line')">tool:Line</button>
+                <button type="button" class="btn btn-info" onclick="editor.tools.select('Pen')">tool:Pen</button>
                 <button type="button" class="btn btn-info" onclick="editor.tools.select('Move')">tool:Move</button>
                 <button type="button" class="btn btn-info" onclick="editor.tools.select('Rectangle')">tool:Rectangle</button>
                 <button type="button" class="btn btn-info" onclick="editor.tools.select('Circle')">tool:Circle</button>
