--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 <body>
     <div class="container">
         <a href="editor.html">editor.html</a>
+        <a href="brush.html">brush.html</a>
     </div>
     <div class="container">
         <h2>bundle</h2>
