--- a/editor.html
+++ b/editor.html
@@ -108,6 +108,12 @@
                 <button type="button" class="btn btn-info" onclick="editor.tool.apply()">tool:Text - apply</button>
             </div>
             <hr>
+            <div>
+                전경색:<input type="color" oninput="editor.contextConf.strokeStyle=this.value">
+                배경색:<input type="color" oninput="editor.contextConf.fillStyle=this.value" value="#ffffff">
+                <input type="range" name="" id="" oninput="editor.contextConf.lineWidth=this.value" value="3">
+            </div>
+            <hr>
         </div>
         <div class="flex-fill">
             <div id="wc-editor" style="outline: dashed 1px #f00; width: 600px; height: 600px;" class="d-flex justify-content-center align-items-center mx-auto">
