--- a/editor.html
+++ b/editor.html
@@ -82,6 +82,10 @@
 
             let divForDebug = document.querySelector('#div-for-debug');
             editor.document.add(wcl4);
+
+            editor.document.layers.select(1)
+
+
             divForDebug.append(editor.document.drawLayer)
             editor.document.layers.all().forEach((layer,index)=>{
                 divForDebug.append(layer)
@@ -119,13 +123,13 @@
                 <button type="button" class="btn btn-info" onclick="editor.tool.apply()">tool:Text - apply</button>
             </div>
             <hr>
-            <form action="" onsubmit="return false;" oninput="editor.setContextConf(Wc.Util.formToObject(this)); if(editor.document.layer){editor.document.layer.flush()}">
+            <form action="" onsubmit="return false;" oninput="editor.setContextConfig(Wc.Util.formToObject(this)); if(editor.document.layer){editor.document.layer.flush()}">
                 <div>
                     전경색:<input type="color" name="foreColor">
                     배경색:<input type="color" name="backColor">
-                    lineWidth:<input type="range" name="" id="" oninput="editor.ctxConf.lineWidth=this.value" value="3">
-                    fontSize:<input type="range" name="" id="" oninput="editor.ctxConf.fontSize=this.value+'px'" value="16">
-                    lineHeight:<input type="range" name="" id="" oninput="editor.ctxConf.lineHeight=this.value+'em'" value="1.5" step="0.1" min="0.1" max="5">
+                    lineWidth:<input type="range" name="" id="" oninput="editor.contextConfig.lineWidth=this.value" value="3">
+                    fontSize:<input type="range" name="" id="" oninput="editor.contextConfig.fontSize=this.value+'px'" value="16">
+                    lineHeight:<input type="range" name="" id="" oninput="editor.contextConfig.lineHeight=this.value+'em'" value="1.5" step="0.1" min="0.1" max="5">
                 </div>
             </form>
             <form action="" onsubmit="return false;" oninput="if(editor.document.layer){editor.document.layer.flush()}">
