--- a/editor.html
+++ b/editor.html
@@ -130,6 +130,8 @@
                     lineWidth:<input type="range" name="" id="" oninput="editor.contextConfig.lineWidth=this.value" value="3">
                     fontSize:<input type="range" name="" id="" oninput="editor.contextConfig.fontSize=this.value+'px'" value="16">
                     lineHeight:<input type="range" name="" id="" oninput="editor.contextConfig.lineHeight=this.value+'em'" value="1.5" step="0.1" min="0.1" max="5">
+                    textPadding:<input type="range" name="" id="" oninput="editor.contextConfig.textPadding=this.value+'em'" value="1.5" step="0.1" min="0.1" max="5">
+                    letterSpacing:<input type="range" name="" id="" oninput="editor.contextConfig.letterSpacing=this.value+'em'" value="0" step="0.1" min="-2" max="2">
                 </div>
             </form>
             <form action="" onsubmit="return false;" oninput="if(editor.document.layer){editor.document.layer.flush()}">
