--- a/editor.html
+++ b/editor.html
@@ -128,14 +128,19 @@
                     전경색:<input type="color" name="foreColor">
                     배경색:<input type="color" name="backColor">
                     lineWidth:<input type="range" name="" id="" oninput="editor.contextConfig.lineWidth=this.value" value="3">
-                    fontSize:<input type="range" name="" id="" oninput="editor.contextConfig.fontSize=this.value+'px'" value="16">
+                    <!-- fontSize:<input type="range" name="" id="" oninput="editor.contextConfig.fontSize=this.value+'px'" value="16"> -->
+                    fontSizeNumber:<input type="range" name="fontSizeNumber" id="" value="10" step="1" min="0" max="100">
+                    fontSizeUnit: <select name="fontSizeUnit" class="form-select" id="" style="width: 6em;">
+                        <option value="px">px</option>
+                        <!-- <option value="pt">pt</option> -->
+                    </select>
                     lineHeightNumber:<input type="range" name="lineHeightNumber" id="" value="1.5" step="0.1" min="0" max="100">
-                    lineHeightUnit: <select name="lineHeightUnit" class="form-select" id="" onchange="editor.contextConfig.textAlign=this.value" style="width: 6em;">
+                    lineHeightUnit: <select name="lineHeightUnit" class="form-select" id="" style="width: 6em;">
                         <option value="em">em</option>
                         <option value="px">px</option>
                     </select>
                     textPaddingNumber:<input type="range" name="textPaddingNumber" id="" value="0" step="0.1" min="0" max="100">
-                    textPaddingUnit: <select name="textPaddingUnit" class="form-select" id="" onchange="editor.contextConfig.textAlign=this.value" style="width: 6em;">
+                    textPaddingUnit: <select name="textPaddingUnit" class="form-select" id="" style="width: 6em;">
                         <option value="px">px</option>
                         <option value="em">em</option>
                     </select>
