--- a/editor.html
+++ b/editor.html
@@ -127,38 +127,48 @@
                 <div>
                     전경색:<input type="color" name="foreColor">
                     배경색:<input type="color" name="backColor">
-                    lineWidth:<input type="range" name="" id="" oninput="editor.contextConfig.lineWidth=this.value" value="3">
-                    <!-- fontSize:<input type="range" name="" id="" oninput="editor.contextConfig.fontSize=this.value+'px'" value="16"> -->
-                    fontSizeNumber:<input type="range" name="fontSizeNumber" id="" value="10" step="1" min="0" max="100">
-                    fontSizeUnit: <select name="fontSizeUnit" class="form-select" id="" style="width: 6em;">
+                    lineWidth:<input type="range" name="lineWidth" value="3">
+                    <!-- fontSize:<input type="range" name="" oninput="editor.contextConfig.fontSize=this.value+'px'" value="16"> -->
+                    fontSizeNumber:<input type="range" name="fontSizeNumber" value="10" step="1" min="0" max="100">
+                    fontSizeUnit: <select name="fontSizeUnit" class="form-select" style="width: 6em;">
                         <option value="px">px</option>
                         <!-- <option value="pt">pt</option> -->
                     </select>
-                    lineHeightNumber:<input type="range" name="lineHeightNumber" id="" value="1.5" step="0.1" min="0" max="100">
-                    lineHeightUnit: <select name="lineHeightUnit" class="form-select" id="" style="width: 6em;">
+                    lineHeightNumber:<input type="range" name="lineHeightNumber" value="1.5" step="0.1" min="0" max="100">
+                    lineHeightUnit: <select name="lineHeightUnit" class="form-select" style="width: 6em;">
                         <option value="em">em</option>
                         <option value="px">px</option>
                     </select>
-                    textPaddingNumber:<input type="range" name="textPaddingNumber" id="" value="0" step="0.1" min="0" max="100">
-                    textPaddingUnit: <select name="textPaddingUnit" class="form-select" id="" style="width: 6em;">
+                    textPaddingNumber:<input type="range" name="textPaddingNumber" value="0" step="0.1" min="0" max="100">
+                    textPaddingUnit: <select name="textPaddingUnit" class="form-select" style="width: 6em;">
                         <option value="px">px</option>
                         <option value="em">em</option>
                     </select>
 
-                    <!-- textPadding:<input type="range" name="" id="" oninput="editor.contextConfig.textPadding=this.value+'em'" value="1.5" step="0.1" min="0.1" max="5"> -->
-                    letterSpacing:<input type="range" name="" id="" oninput="editor.contextConfig.letterSpacing=this.value+'em'" value="0" step="0.1" min="-2" max="2">
+                    letterSpacingNumber:<input type="range" name="letterSpacingNumber" value="0" step="0.1" min="0" max="100">
+                    letterSpacingUnit: <select name="letterSpacingUnit" class="form-select" style="width: 6em;">
+                        <option value="px">px</option>
+                        <option value="em">em</option>
+                    </select>
 
-                    <select name="" class="form-select" id="" onchange="editor.contextConfig.textAlign=this.value" style="width: 6em;">
+                    <!-- textPadding:<input type="range" name="" oninput="editor.contextConfig.textPadding=this.value+'em'" value="1.5" step="0.1" min="0.1" max="5"> -->
+                    letterSpacing:<input type="range" name="" oninput="editor.contextConfig.letterSpacing=this.value+'em'" value="0" step="0.1" min="-2" max="2">
+
+                    textAlign: <select name="textAlign" class="form-select" style="width: 6em;">
                         <option value="left">left</option>
                         <option value="right">right</option>
                         <option value="center">center</option>
                         <option value="start">start</option>
                         <option value="end">end</option>
                     </select>
-                    <select name="" class="form-select" id="" onchange="editor.contextConfig.direction=this.value" style="width: 6em;">
-                        <option value="ltr">ltr</option>
-                        <option value="rtl">rtl</option>
-                        <option value="inherit">inherit</option>
+                    textBaseline: 
+                    <select name="textBaseline" class="form-select" style="width: 6em;">
+                        <option value="alphabetic">alphabetic</option>
+                        <option value="top">top</option>
+                        <option value="middle">middle</option>
+                        <option value="bottom">bottom</option>
+                        <option value="hanging">hanging</option>
+                        <option value="ideographic">ideographic</option>
                     </select>
                     
                     
