--- a/editor.html
+++ b/editor.html
@@ -108,7 +108,7 @@
     </script>
 </head>
 <body>
-    <div class="w-100 h-100 d-flex flex-column" style="top:0;left:0;bottom:auto;margin:0; touch-action: none;">
+    <div>
         <div class="container">
             <h2>Editor</h2>
             <div>
@@ -145,14 +145,11 @@
                         <option value="em">em</option>
                     </select>
 
-                    letterSpacingNumber:<input type="range" name="letterSpacingNumber" value="0" step="0.1" min="0" max="100">
+                    letterSpacingNumber:<input type="range" name="letterSpacingNumber" value="0" step="0.1" min="-10" max="10">
                     letterSpacingUnit: <select name="letterSpacingUnit" class="form-select" style="width: 6em;">
                         <option value="px">px</option>
                         <option value="em">em</option>
                     </select>
-
-                    <!-- textPadding:<input type="range" name="" oninput="editor.contextConfig.textPadding=this.value+'em'" value="1.5" step="0.1" min="0.1" max="5"> -->
-                    letterSpacing:<input type="range" name="" oninput="editor.contextConfig.letterSpacing=this.value+'em'" value="0" step="0.1" min="-2" max="2">
 
                     textAlign: <select name="textAlign" class="form-select" style="width: 6em;">
                         <option value="left">left</option>
