touch-event 에디터 영역만

--- a/editor.html
+++ b/editor.html
@@ -180,7 +180,7 @@
             <hr>
         </div>
         <div class="flex-fill">
-            <div id="wc-editor" style="outline: dashed 1px #f00; width: 600px; height: 600px;" class="d-flex justify-content-center align-items-center mx-auto">
+            <div id="wc-editor" style="outline: dashed 1px #f00; width: 600px; height: 600px; touch-action: none;" class="d-flex justify-content-center align-items-center mx-auto">
                 <canvas id="wc-document" width="500" height="500" is="wc-document"></canvas>
             </div>
         </div>
